# MaidSafe-Ports

./: .gitignore  CMakeLists.txt  README.md  api.cc  api.h  binding.gyp  interface.i  main.cc
android/: interface.i.in
cmake_modules/: port_utils.cmake  standard_setup.cmake
csharp/: Sample.cs  interface.i.in
nodejs/: binding.gyp.in  interface.i.in  sample.js
python/: interface.i.in  sample.py
src/android/: CMakeLists.txt  interface.i.in
src/android/sample/class/: AndroidManifest.xml
src/android/sample/class/jni/: Android.mk  Application.mk
src/android/sample/class/libs/armeabi-v7a/: gdb.setup
src/android/sample/class/res/layout/: main.xml
src/android/sample/class/src/org/maidsafe/: MyTest.java
src/c/: CMakeLists.txt  c_api.cc  c_api.h  main.cc
src/c_wrapper/: CMakeLists.txt  c_api.cc  c_api.h
src/common/: CMakeLists.txt  api.cc  api.h  main.cc
src/csharp/: CMakeLists.txt  Sample.cs  interface.i.in
src/nodejs/: CMakeLists.txt  binding.gyp.in  interface.i.in  sample.js
src/python/: CMakeLists.txt  interface.i.in  sample.py
